--- a/deploy/base/namespaces.yaml
+++ b/deploy/base/namespaces.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: sre-dashboard
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
